Add KIO::DropJobFlag to allow manually showing the menu

Summary:
This patch allows the application to manually popup the menu by using the `KIO::ShowMenuManually` flag with the `DropJob::showMenu()` method.

BUG: 415917

Test Plan: Can't reproduce the bug with this patch.

Reviewers: #frameworks, davidedmundson, elvisangelaccio, mart, dfaure

Reviewed By: dfaure

Subscribers: ngraham, broulik, anthonyfieroni, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D26484